--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,6 +3,11 @@ version = "3.5.8"
 style = default
 
 runner.dialect = scala213source3
+fileOverride {
+  "glob:**/src/main/scala-3/**" {
+    runner.dialect = scala3
+  }
+}
 
 project.excludeFilters = [
   "scalafix/*"
