Upgrade to scalafmt 3.5.7

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "3.5.2"
+version = "3.5.7"
 
 style = default
 
@@ -22,25 +22,7 @@ rewrite.rules = [
   AvoidInfix
   RedundantBraces
   RedundantParens
-  AsciiSortImports
+  Imports
   PreferCurlyFors
 ]
 
-rewrite.neverInfix.excludeFilters = [until
-  to
-  by
-  eq
-  ne
-  "should.*"
-  "contain.*"
-  "must.*"
-  in
-  be
-  taggedAs
-  thrownBy
-  synchronized
-  have
-  when
-  size
-  theSameElementsAs
-  at]
