--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Install brew formulae (ubuntu)
         if: (matrix.project == 'rootNative') && startsWith(matrix.os, 'ubuntu')
-        run: /home/linuxbrew/.linuxbrew/bin/brew install s2n
+        run: /home/linuxbrew/.linuxbrew/bin/brew install openssl s2n
 
       - name: Check that workflows are up to date
         run: sbt githubWorkflowCheck
