--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,15 +27,10 @@ jobs:
     name: Build and Test
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
         scala: [3.3.0, 2.12.18, 2.13.11]
         java: [temurin@17]
         project: [rootJS, rootJVM, rootNative]
-        exclude:
-          - scala: 3.3.0
-            os: macos-latest
-          - scala: 2.12.18
-            os: macos-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -74,10 +69,6 @@ jobs:
       - name: Install brew formulae (ubuntu)
         if: (matrix.project == 'rootNative') && startsWith(matrix.os, 'ubuntu')
         run: /home/linuxbrew/.linuxbrew/bin/brew install openssl s2n
-
-      - name: Install brew formulae (macOS)
-        if: (matrix.project == 'rootNative') && startsWith(matrix.os, 'macos')
-        run: brew install openssl s2n
 
       - name: Check that workflows are up to date
         run: sbt githubWorkflowCheck
@@ -269,6 +260,9 @@ jobs:
           echo "$PGP_SECRET" | base64 -di > /tmp/signing-key.gpg
           echo "$PGP_PASSPHRASE" | gpg --pinentry-mode loopback --passphrase-fd 0 --import /tmp/signing-key.gpg
           (echo "$PGP_PASSPHRASE"; echo; echo) | gpg --command-fd 0 --pinentry-mode loopback --change-passphrase $(gpg --list-secret-keys --with-colons 2> /dev/null | grep '^sec:' | cut --delimiter ':' --fields 5 | tail -n 1)
+
+      - name: Wait for Cirrus CI
+        uses: typelevel/await-cirrus@main
 
       - name: Publish
         run: sbt tlCiRelease
