enforce new wildcard syntax

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -11,6 +11,7 @@ project.excludeFilters = [
 fileOverride {
   "glob:**/scala-3/**" {
     runner.dialect = scala3
+    rewrite.scala3.convertToNewSyntax = false
   }
 }
 
@@ -26,3 +27,7 @@ rewrite.rules = [
   PreferCurlyFors
 ]
 
+rewrite.scala3.convertToNewSyntax = true
+runner.dialectOverride.allowAsForImportRename = false
+runner.dialectOverride.allowStarWildcardImport = false
+runner.dialectOverride.allowPostfixStarVarargSplices = false
