Fix macos gha runners

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -287,6 +287,8 @@ jobs:
         project: [ioJS, ioJVM, ioNative]
     runs-on: ${{ matrix.os }}
     steps:
+      - run: brew install sbt
+
       - name: Checkout current branch (full)
         uses: actions/checkout@v4
         with:
