--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "3.9.4"
+version = "3.9.9"
 
 style = default
 
@@ -14,6 +14,8 @@ fileOverride {
     rewrite.scala3.convertToNewSyntax = false
   }
 }
+
+align.preset = some
 
 docstrings.wrap = "no"
 
